# shiviz_px4_navigation

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml  waypoints.yaml
include/: waypoint_navigator.hpp
include/waypoint_navigator/: waypoint_navigator.hpp
launch/: px4_offboard.launch
src/: main.cpp  odom.py  waypoint_navigator.cpp
